cabal-version:      3.0

name:               news
version:            0.1.0.0
license:            BSD-2-Clause
license-file:       LICENSE


author:             akshay.s
maintainer:         adiosphobian@gmail.com
build-type:         Simple
extra-doc-files:    README.md

common warnings
    ghc-options: -Wall

executable news
    import:           warnings
    main-is:          Main.hs
    build-depends:    base, servant-server, wai, aeson, warp, text, wai-extra, http-conduit, bytestring, lrucache, ghc-prim, unix
    hs-source-dirs:   app
    default-language: Haskell2010
    other-modules:
        News
        Service
